--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Em đồng ý làm người iuu anhh nhaa bé:3</title>
+    <title>em đồng ý mở chặn anh nha:3</title>
     <title>Thoát ra hoặc không chọn thì làm vợ anhh</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
             <img src="mocha4.gif" alt="Osito Triste" style="width: 80%; height: 80%;">
         </div>
         
-        <h1 id="question">Em đồng ý làm người iuu anhh nhaa bé:3</h1>
+        <h1 id="question">em đồng ý mở chặn anh nha:3</h1>
         <title>Thoát ra hoặc không chọn thì làm vợ anhh</title>
         <div id="messageContainer" style="display: none;"></div>
 
@@ -47,3 +47,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
